# katamino_csp_solver

./: LICENSE.md  README.md  pyproject.toml
katamino_csp_solver/: constraints.py  field.py  main.py  pieces.py  util.py
katamino_solver/: constraints.py  field.py  pieces.py  solve.py  util.py
tests/: test_all.py
