[tool.poetry]
name = "katamino-solver"
version = "0.1.0"
description = ""
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]
readme = "README.md"
packages = [{include = "katamino_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
numpy = "^1.23.0"
python-constraint = "^1.4.0"
numba = "^0.56.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
