[tool.poetry]
name = "katamino-csp-solver"
version = "0.1.0"
description = ""
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]
readme = "README.md"
license = "LICENSE.md"
packages = [{include = "katamino_csp_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
numpy = "^1.24.0"
python-constraint = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
